fixing spacing of heading

--- a/frontend/src/Components/StatsBar/StatsBar.scss
+++ b/frontend/src/Components/StatsBar/StatsBar.scss
@@ -17,7 +17,7 @@
     
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     height: 5rem;
     border-bottom: solid 1px rgba(42, 60, 36, 0.116);
